Add 树.md from my mac.

--- a/_posts/树.md
+++ b/_posts/树.md
@@ -9,25 +9,178 @@ tags:
 树的基础知识。
 
 
+
+
 <!-- more -->
 
-## 树的存储结构
-
-- 双亲存储结构（树的顺序存储结构）
-- 孩子存储结构（图的邻接表存储结构）
-- 孩子兄弟存储结构（二叉树链式存储结构）
+# 树
+## 1. 树的定义与基本术语
 
 
-## 线索二叉树
-### 基本概念
+
+## 2. 树的存储结构
+
+- **双亲存储结构**（树的顺序存储结构）
+- **孩子存储结构**（图的邻接表存储结构）
+- **孩子兄弟存储结构**（二叉树链式存储结构）
+
+
+
+
+
+
+# 二叉树
+
+## 1. 二叉树的定义
+二叉树，满二叉树，完全二叉树。
+
+
+
+## 2. 二叉树的存储结构
+
+顺序存储结构：常用于完全二叉树。
+链式存储结构：
+``` PYTHON
+class TreeNode(object):
+    def __init__(self, x, left=None, right=None):
+        self.val = x
+        self.left = left
+        self.right = right
+```
+
+
+
+## 3. 二叉树的性质
+1. 非空二叉树中，叶结点数等于双分支结点数加$1$。
+   $$
+   n_{0}+n{1}+n{2}-1=n_{1}+2n_{2} \\
+   n_{0}=n{2}+1
+   $$
+
+   同理，在度为$m$的树中，有
+   $$
+   n_{0}=1+n_{2}+2n_{3}+\dots+(m-1)n_{m}。
+   $$
+
+2. 二叉树的第$i$层中，最多有$2^{i-1}$个结点$(i\ge{1})$。
+
+3. 高度（或深度）为$k$的二叉树最多有$2^{k}-1$个结点$(k\ge{1})$。
+
+4. $n$结点完全二叉树的高度为$\lceil{log_{2}^{n+1}}\rceil$或$\lfloor{log_{2}^{n}}\rfloor+1$。
+
+5. 顺序存储的$n$结点完全二叉树中，有
+   若$i\ne{1}$，则i的双亲结点为$\lfloor{i/2}\rfloor$，否则为根结点。
+   若$2i\le{n}$，则i的左子结点为$2i$，否则无左子结点。
+   若${2i+1}\ne{n}$，则i的右子结点为$2i+1$，否则无右子结点。
+
+6. 符合Catalan函数，即$n$个结点的二叉树有$H(n)$种不同的形态，
+   $$
+   H(n)=C_{2n}^{n}\frac{1}{n+1}。
+   $$
+
+
+
+
+
+
+## 4. 二叉树的非递归遍历
+### 4.1 先序遍历
+``` PYTHON
+#pre-order traversal
+def preorder_iter(self, root):
+    s = []
+    if root:
+        s.append(root)
+        while s:
+            t = s.pop()
+            print t.val
+            if t.right:
+                s.append(t.right)
+            if t.left:
+                s.append(t.left)
+def preorder_iter_1(self, root):
+    s = []
+    while s or root:
+        while root:
+            s.append(root)
+            print root.val
+            root = root.left
+        if s:
+            root = s.pop()
+            root = root.right
+```
+
+
+
+### 4.2 中序遍历
+
+``` PYTHON
+#in-order traversal
+def inorder_iter(self, root):
+    s = []
+    while s or root:
+        while root:
+            s.append(root)
+            root = root.left
+        if s:
+            root = s.pop()
+            print root.val
+            root = root.right
+```
+
+
+
+### 4.3 后序遍历
+
+``` PYTHON
+#post-order traversal
+def postorder_iter(self, root):
+    s = []
+    previsited = None
+    while s or root:
+        while root:
+            s.append(root)
+            root = root.left
+        root = s[-1]
+
+        #if right child of root node is None or has been visited, then visit root node.
+        if not root.right or root.right == previsited:
+            print root.val
+            previsited = root
+            s.pop()
+            root = None
+
+        #visit right child of root node.
+        else:
+            root = root.right
+def postorder_iter_2(self, root):
+    s1 = []
+    s2 = []
+    if root:
+        s1.append(root)
+        while s1:
+            t = s1.pop()
+            s2.append(t)
+            if t.left:  s1.append(t.left)
+            if t.right: s1.append(t.right)
+        while s2:
+            t = s2.pop()
+            print t.val
+```
+
+
+
+## 5. 线索二叉树
+
+### 5.1 基本概念
 1. 线索二叉树中，线索标记为1时表示相应的子分支为线索，线索标记为0时表示相应的子分支为指针。
 
 2. 线索化二叉树的过程，是将**非线性树结构**转换为**线性链表结构**的过程。
 
 3. **先序线索二叉树和后序线索二叉树是不完善的线索二叉树**，前者无法有效查找任一结点的前驱，后者无法有效查找任一结点的后继。**只有中序线索二叉树是完善的线索二叉树**。
 
-4. 数据结构定义
-```Python
+4. 数据结构定义：
+``` PYTHON
 class TreeNode(object):
     def __init__(self, x, left = None, right = None, ltag = 0, rtag = 0):
         self.val = x
@@ -40,8 +193,10 @@ class TreeNode(object):
 ```
 
 
-### 构造中序线索二叉树
-```Python
+
+### 5.2 构造中序线索二叉树
+
+``` PYTHON
 def inthread(self, root, pre):
     if root:
         self.inthread(root.left, pre)
@@ -69,8 +224,11 @@ def inorder(self, root):
         pre[0].rtag = 1
 ```
 
-### 遍历线索二叉树
-```Python
+
+
+### 5.3 遍历线索二叉树
+
+``` PYTHON
 def first(self, p):
     while p.ltag == 0:
         p = p.left
@@ -96,29 +254,42 @@ def inorderthread(self, root):
 
 
 
+## 6. 哈夫曼树
 
-## 树和森林
-### 树与二叉树的转换（左孩子右兄弟）
-1. 将同一结点的各孩子结点用虚线连接起来。
-2. 将每个结点的分支从左往右除了第一个以外，其余的都剪掉。
-3. 将虚线连成实线，顺时针将各节点旋转到二叉树中相应的位置上。
-
-### 树的遍历
-树的遍历有两种方式：先序遍历和后序遍历。
-其中，**树的先序遍历**对应其**二叉树的先序遍历**，**树的后序遍历**对应其**二叉树的中序遍历**。
-
-### 森林的遍历
-森林的遍历有两种方式：先序遍历和中序便遍历。
-森林的中序遍历，其实就是从森林的第一颗树开始逐个后序遍历森林中的每一棵树。
-其中，**森林的先序遍历**对应其**二叉树的先序遍历**，**森林的中序遍历**对应其**二叉树的中序遍历**。
-
-
-## 哈夫曼树
 哈夫曼树（最优二叉树），其特点是**带权路径最短**，即权值越大的结点距离根结点越近；树中没有度为1的结点，即**正则（严格）二叉树**。
 
 对于同一组结点，哈夫曼树并不唯一，但其最小带权路径长度（WPL）相同，**即一组结点存在唯一最小WPL**。
 
 哈夫曼编码是由哈夫曼树编码（左0右1）得到，**哈夫曼编码一定是前缀编码**，即任意一个字符的编码都不是另一个字符编码的前缀。
+
+
+
+
+
+# 树和森林
+
+## 1. 树与二叉树的转换（左孩子右兄弟）
+1. 将同一结点的各孩子结点用虚线连接起来。
+2. 将每个结点的分支从左往右除了第一个以外，其余的都剪掉。
+3. 将虚线连成实线，顺时针将各节点旋转到二叉树中相应的位置上。
+
+
+
+## 2. 树的遍历
+
+树的遍历有两种方式：先序遍历和后序遍历。
+其中，**树的先序遍历**对应其**二叉树的先序遍历**，**树的后序遍历**对应其**二叉树的中序遍历**。
+
+
+
+## 3. 森林的遍历
+
+森林的遍历有两种方式：先序遍历和中序便遍历。
+森林的中序遍历，其实就是从森林的第一颗树开始逐个后序遍历森林中的每一棵树。
+其中，**森林的先序遍历**对应其**二叉树的先序遍历**，**森林的中序遍历**对应其**二叉树的中序遍历**。
+
+
+
 
 
 
