--- a/_posts/树.md
+++ b/_posts/树.md
@@ -1,17 +1,16 @@
 ---
 title: 树
 date: 2017-07-14 17:00:00
-tags: 
+tags:
 - 数据结构
-- 算法
+- 基础算法
 ---
 
 树的基础知识。
 
-
-
-
 <!-- more -->
+
+
 
 # 树
 ## 1. 树的定义与基本术语
@@ -53,8 +52,8 @@ class TreeNode(object):
 ## 3. 二叉树的性质
 1. 非空二叉树中，叶结点数等于双分支结点数加$1$。
    $$
-   n_{0}+n{1}+n{2}-1=n_{1}+2n_{2} \\
-   n_{0}=n{2}+1
+   n_{0}+n_{1}+n_{2}-1=n_{1}+2n_{2} \\
+   n_{0}=n_{2}+1
    $$
 
    同理，在度为$m$的树中，有
@@ -69,14 +68,21 @@ class TreeNode(object):
 4. $n$结点完全二叉树的高度为$\lceil{log_{2}^{n+1}}\rceil$或$\lfloor{log_{2}^{n}}\rfloor+1$。
 
 5. 顺序存储的$n$结点完全二叉树中，有
-   若$i\ne{1}$，则i的双亲结点为$\lfloor{i/2}\rfloor$，否则为根结点。
-   若$2i\le{n}$，则i的左子结点为$2i$，否则无左子结点。
+   若$i\ne{1}$，则i的双亲结点为$\lfloor{i/2}\rfloor$，否则为根结点；
+   若$2i\le{n}$，则i的左子结点为$2i$，否则无左子结点；
    若${2i+1}\ne{n}$，则i的右子结点为$2i+1$，否则无右子结点。
 
 6. 符合Catalan函数，即$n$个结点的二叉树有$H(n)$种不同的形态，
    $$
    H(n)=C_{2n}^{n}\frac{1}{n+1}。
    $$
+
+
+
+
+
+
+
 
 
 
@@ -173,7 +179,7 @@ def postorder_iter_2(self, root):
 ## 5. 线索二叉树
 
 ### 5.1 基本概念
-1. 线索二叉树中，线索标记为1时表示相应的子分支为线索，线索标记为0时表示相应的子分支为指针。
+1. 线索二叉树中，线索标记为$1$时表示相应的子分支为线索，线索标记为$0$时表示相应的子分支为指针。
 
 2. 线索化二叉树的过程，是将**非线性树结构**转换为**线性链表结构**的过程。
 
@@ -256,11 +262,11 @@ def inorderthread(self, root):
 
 ## 6. 哈夫曼树
 
-哈夫曼树（最优二叉树），其特点是**带权路径最短**，即权值越大的结点距离根结点越近；树中没有度为1的结点，即**正则（严格）二叉树**。
+哈夫曼树（最优二叉树），其特点是**带权路径长度（WPL）最短**，即权值越大的结点距离根结点越近；树中没有度为1的结点，即**正则（严格）二叉树**。
 
-对于同一组结点，哈夫曼树并不唯一，但其最小带权路径长度（WPL）相同，**即一组结点存在唯一最小WPL**。
+对于同一组结点，哈夫曼树并不唯一，但其最小WPL相同，**即一组结点存在唯一最小WPL**。
 
-哈夫曼编码是由哈夫曼树编码（左0右1）得到，**哈夫曼编码一定是前缀编码**，即任意一个字符的编码都不是另一个字符编码的前缀。
+哈夫曼编码是由哈夫曼树编码（左$0​$右$1​$）得到，**哈夫曼编码一定是前缀编码**，即任意一个字符的编码都不是另一个字符编码的前缀。
 
 
 
@@ -272,6 +278,7 @@ def inorderthread(self, root):
 1. 将同一结点的各孩子结点用虚线连接起来。
 2. 将每个结点的分支从左往右除了第一个以外，其余的都剪掉。
 3. 将虚线连成实线，顺时针将各节点旋转到二叉树中相应的位置上。
+
 
 
 
