Add|Update posts before 2018.

--- a/_posts/快速幂方.md
+++ b/_posts/快速幂方.md
@@ -18,7 +18,6 @@ power(x, y)的经典应用。
 ## 基本算法
 
 递归算法如下。
-
 ``` PYTHON
 def power(x, n):
     if x == 0:
@@ -32,7 +31,6 @@ def power(x, n):
 ```
 
 非递归算法如下。
-
 ``` PYTHON
 def power(self, base, exponent):
     if base == 0:
@@ -64,8 +62,6 @@ def fibonacci_r(n):
 递归算法求解斐波那契数列，时间复杂度为$O(2^{n})$，空间复杂度为$O(n)$。
 
 递归算法之所以效率不高，是因为这种方法进行了**大量重复计算**。因此，可以考虑使用**动态规划**求解。
-
-
 ``` PYTHON
 def fibonacci_dp(n):
     if n<=0: return 0
@@ -113,17 +109,4 @@ def mymultiply(self, a, b):
 ```
 快速幂方算法求解斐波那契数列，时间复杂度为$O(\log_{2}^{n})$，空间复杂度为$O(1)$。
 
-快速幂方算法关键在于**构造问题的初始矩阵**。
-
-
-
-
-
-
-
-
-
-
-
-
-
+快速幂方算法关键在于**构造问题解的初始矩阵**。
