Add|Update all posts before 2018.

--- a/_posts/快速排序.md
+++ b/_posts/快速排序.md
@@ -18,7 +18,7 @@ tags:
 
 ## 基本算法
 
-### 顺序存储结构
+### 1. 顺序存储结构
 
 递归实现算法。
 ``` PYTHON
@@ -81,7 +81,7 @@ def quicksort(nums, left, right):
 
 
 
-### 链式存储结构
+### 2. 链式存储结构
 对于单链表排序，想起[LeetCode论坛](https://discuss.leetcode.com/)里的一句话：
 
 > Well, life gets difficult pretty soon whenever the same operation on array is transferred to linked list.
@@ -216,7 +216,7 @@ def quick_sort(self, hat, tail):
 
 ## top K问题
 
-### 堆排序求解top K问题
+### 1. 堆排序求解top K问题
 ``` PYTHON
 def GetLargestK(self, tinput, k):
     ret = []
@@ -260,7 +260,7 @@ def buildheap(self, nums, low, high):
 
 
 
-### 快速排序求解top K问题
+### 2. 快速排序求解top K问题
 ``` PYTHON
 def GetLargestK(self, tinput, k):
     ret = []
